--- a/bin/freefactory-notify.service
+++ b/bin/freefactory-notify.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=FreeFactory Drop Folder Monitor
-After=network.target
+After=network.target local-fs.target remote-fs.target
 
 [Service]
 Type=simple
