--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,76 @@
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
+# --- Python ---
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
 
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
+# Virtual envs
+.venv/
+venv/
+env/
 
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
+# Testing / tooling caches
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
 
-# OS generated files #
-######################
+# Coverage
+.coverage
+coverage.xml
+htmlcov/
+
+# Build / packaging / installers
+build/
+dist/
+pip-wheel-metadata/
+*.spec
+
+# --- Editors / IDEs ---
+.vscode/
+.idea/
+
+# --- OS cruft ---
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
+desktop.ini
 
-# Folders
-no-longer-used/*
-bin/no-longer-used/*
-Pics-/*
-MyFactories/*
-FactoryArchive/*
-Pics-UpperCasebackup/*
+# --- Qt / optional ---
+*.pro.user
+*.qmake.stash
+*.user
+
+# --- Logs / backups / temp ---
+*.log
+*.bak
+*-bak
+.factory.bak
+backups/
+temp/
+tmp/
+MyFactories/
+FactoryArchive/
+Pics-UpperCasebackup/
+database/filters1
+bin/notes.txt
+docs/ffmpegStreamingExamples.txt
+docs/Freefactory Unique Features.docx
+
+
+# --- Project outputs / large media ---
+video/
+videos/
+
+# --- Specific Factories to exclude ---
+Factories/DVCProHD-MOV
+Factories/DVCProHD-MXF
+Factories/EllieFBM-Convert
+Factories/Omninon-MPEG2-MXF-with-Subs
+Factories/Recording_Factory_Test
+Factories/WDTV-8-Channel-Audio-Test
+Factories/WDTV-Captions
+
+# (Optional) If you later standardize on an extension for factory files,
+# you can ignore user-generated factories but keep defaults:
+# Factories/*.bak
+# Factories/*.cache
+# !Factories/Defaults/**
